# car_detect_caption

./: README.md  main.py  pyproject.toml
